fix: added support for text truncation if button width is set

--- a/src/button.scss
+++ b/src/button.scss
@@ -61,6 +61,9 @@ $block: #{$fd-namespace}-button;
   max-height: $fd-button-height;
   min-width: $fd-button-min-width;
   line-height: $fd-button-line-height;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 
   @include iconSize($fd-button-icon-font-size);
 
